RESOLVED FIXED66411
[Chromium] WebAccessibilityObject needs access to range values
https://bugs.webkit.org/show_bug.cgi?id=66411
Summary [Chromium] WebAccessibilityObject needs access to range values
Dominic Mazzoni
Reported 2011-08-17 14:23:58 PDT
WebAccessibilityObject doesn't currently provide a way to access the current value and min/max values of a range control, like a slider, scroll bar, or progress bar.
Attachments
Adds several new accessors to WebAccessibilityObject (10.62 KB, patch)
2011-08-17 14:32 PDT, Dominic Mazzoni
dglazkov: review+
webkit.review.bot: commit-queue-
Add back "Reviewed by NOBODY" line to Changelog in previous patch...oops! (10.65 KB, patch)
2011-08-18 08:13 PDT, Dominic Mazzoni
no flags
Dominic Mazzoni
Comment 1 2011-08-17 14:32:05 PDT
Created attachment 104244 [details] Adds several new accessors to WebAccessibilityObject
WebKit Review Bot
Comment 2 2011-08-18 02:23:44 PDT
Comment on attachment 104244 [details] Adds several new accessors to WebAccessibilityObject Rejecting attachment 104244 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-03', '--port..." exit_code: 1 Last 500 characters of output: Updating working directory Processing patch 104244 from bug 66411. ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/chromium/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/9421503
Adam Barth
Comment 3 2011-08-18 02:48:03 PDT
Comment on attachment 104244 [details] Adds several new accessors to WebAccessibilityObject View in context: https://bugs.webkit.org/attachment.cgi?id=104244&action=review > Source/WebKit/chromium/ChangeLog:9 > + Add a bunch of accessors to WebAccessibilityObject to expose more of > + AccessibilityObject to Chromium, including range control values, > + document load state, live region attributes, and a few other > + ARIA attributes. > + > + https://bugs.webkit.org/show_bug.cgi?id=66411 > + You need to leave in the "Reviewed by NOBODY (OOPS!)." line so the tools know where to fill in the reviewer.
Dominic Mazzoni
Comment 4 2011-08-18 08:13:09 PDT
Created attachment 104343 [details] Add back "Reviewed by NOBODY" line to Changelog in previous patch...oops!
WebKit Review Bot
Comment 5 2011-08-18 13:23:00 PDT
Comment on attachment 104343 [details] Add back "Reviewed by NOBODY" line to Changelog in previous patch...oops! Clearing flags on attachment: 104343 Committed r93342: <http://trac.webkit.org/changeset/93342>
WebKit Review Bot
Comment 6 2011-08-18 13:23:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.